--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "build": "babel src --out-dir dist --source-maps inline"
+    "build-server": "babel src/server --out-dir dist/server --source-maps inline",
+    "build-frontend": "npx webpack",
+    "build": "npm run build-server && npm run build-frontend"
   },
   "author": "Vasya",
   "repository": {
@@ -14,7 +16,9 @@
   },
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.3",
@@ -22,8 +26,11 @@
     "@babel/node": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
     "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
     "eslint": "^7.3.1",
     "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.21.2"
+    "eslint-plugin-import": "^2.21.2",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   }
 }
